--- a/style.css
+++ b/style.css
@@ -1,23 +1,29 @@
-body{
-  background:#fff;
+html, body{
   height:100%;
   margin:0;
   padding:0;
+}
+body{
+  background:#fff;
   font-family:arial, sans-serif;;
   font-size:14px;
+  height:100%;
+  margin:0;
+  padding:0;
 }
 #main{
+  height:100%;
   display:flex;
   flex-direction: column;
+  flex:auto;
 }
 #topbar{
   padding:10px;
   margin: 10px;
-}
-#internal{
   display:flex;
   float:right;
   justify-content: flex-end;
+  height:60px;
 }
 #gmail{
   display:inline-block;
@@ -40,10 +46,88 @@ body{
   max-height:92px;
   margin-top:auto;
 }
-img{
+.img{
   max-height: 100%;
   max-width:100%;
   object-fit: contain;
   object-position: center-bottom;
   width:auto;
+}
+#search{
+  display:flex;
+  /*flex-direction: column;
+  align-items: center;*/
+  flex-direction: row;
+  justify-content: center;
+  padding:20px;
+  max-height: 160px;
+}
+.form{
+  flex-grow: 100;
+  max-width:584px
+}
+.searchform{
+  /*margin:0 auto;
+  width: auto;*/
+  /*max-width:584px;*/
+  /*width:auto;*/
+/*  position: relative;*/
+  padding-top: 6px;
+  flex-grow: 100;
+  max-width:584px
+}
+.searchbar{
+  height: 44px;
+  width:100%;
+}
+#bar{
+  height: 34px;
+  width:100%;
+  margin: 0;
+  padding: 0;
+  padding-left: 10px;
+  outline: none;
+  word-wrap: break-word;
+/*  display: flex;
+  flex: 100%;*/
+  font-size: 16px;
+  border:1px solid #dfe1e5;;
+  /*border-color: grey;*/
+  border-radius: 24px;
+
+}
+.buttons{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height:70px;
+  padding-top:20px;
+}
+#searchbutton{
+  background-color: #f8f9fa;
+  border: 1px solid #dfe1e5;
+  border-radius: 4px;
+  color: #3c4043;
+  margin: 11px 4px;
+  padding: 0 16px;
+  line-height: 27px;
+  height: 36px;
+  min-width: 54px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
+}
+#luckybutton{
+  background-color: #f8f9fa;
+  border: 1px solid #dfe1e5;
+  border-radius: 4px;
+  color: #3c4043;
+  margin: 11px 4px;
+  padding: 0 16px;
+  line-height: 27px;
+  height: 36px;
+  min-width: 54px;
+  text-align: center;
+  cursor: pointer;
+  user-select: none;
 }
